--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Oss</title>
 </head>
 <body>
-    <h1>Abd Elrahman osama's portfolio</h1>
+    <h1>Abd Elrahman Osama's portfolio</h1>
     <h2>ana el mtrshm</h2>
     <hr />
 
